--- a/ejemplo.html
+++ b/ejemplo.html
@@ -62,9 +62,9 @@
 <!--Para color video xd -->
 <video src=""></video>
 <!--Para utilizar video o archivo de internet -->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/DkJrikpfR5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h4>Sonidos gaaaa</h4>
-<audio src="&"></audio>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/B3LjGJuwrAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h4>Sonidos</h4>
+<audio src="/BrayanFiestas123456.github.io/musica/Future - Mask Off (Aesthetic Remix)  RX7 Mountain Drift (1).mp3"></audio>
 </section>
     <aside style="float: right; width: 30%;"> </aside>
     <a href="/BrayanFiestas123456.github.io/imagenes1/ol.jpg"></a>
