--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1 > Departamento del Cusco</h1>
     <nav style="background-color: rgba(45, 156, 119, 0.171);">
 <ul style="list-style-type: none; text-align: center;display: inline-block; color: rgb(5, 5, 5);font-size: 18px;">
-    <li style="display: inline; padding: 135px 135px;"><a href="/paisajecusco.html">Zonas Turisticas</a></li>
-    <li style="display: inline; padding: 135px 135px;">Platos Tipicos      </li>
-    <li style="display: inline; padding: 135px 135px;">Flora Y Fauna       </li>
-    <li style="display: inline; padding: 135px 135px;"> folklore           </li>
+    <li style="display: inline; padding: 135px 135px;"><a href="/zonasturisticas.html">Zonas Turisticas</a></li>
+    <li style="display: inline; padding: 135px 135px;"><a href="/PlatosTipicos.html"> Platos Tipicos</a></li>
+    <li style="display: inline; padding: 135px 135px;"> <a href="/florayfauna.html">Flora Y Fauna</a></li>
+    <li style="display: inline; padding: 135px 135px;">  <a href="/folklore.html">folklore</a></li>
 </ul>
     </nav>
     
