--- a/index.html
+++ b/index.html
@@ -281,13 +281,7 @@
                 <td><img src="/imagenes1/canas.png" alt="" width="100"></td>
 </tr>
 </table>
-    </section>
-
-    <footer>
-
-<h3>Creado por Brayan Fiestas</h3>
-
-    </footer>
+    </section
 
     
 
