--- a/index.html
+++ b/index.html
@@ -281,9 +281,11 @@
                 <td><img src="/imagenes1/canas.png" alt="" width="100"></td>
 </tr>
 </table>
-    </section
+</section>
 
-    
+<footer>
+    <h3>Creado por Brayan</h3>
+</footer>
 
 
 
