--- a/zonasturisticas.html
+++ b/zonasturisticas.html
@@ -6,10 +6,202 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zonas Turisticas</title>
 </head>
-<body>
-    <h1>Zonas Turisticas</h1>
-    <a href="/index.html">Menu</a>
+<body style="background-color: rgb(206, 214, 200)">
     
+<hr>
+<center >
+    <h1 style="color: rgb(32, 73, 16);" >Zonas Turisticas </h1>
+</center>
+    <hr>
+    <br>
+<nav style="background-color: rgba(45, 156, 119, 0.171);">
+<ul style="list-style-type: none; text-align: center;display: inline-block; color: rgb(5, 5, 5);font-size: 18px;">
 
+<li style="display: inline; padding: 135px 135px;">
+    <a href="/index.html" style="background-color:; color: rgb(54, 92, 66);">  Menu principal</a> </button>
+</li>
+<li style="display: inline; padding: 135px 135px;"> <a href="/PlatosTipicos.html" style="background-color:; color: rgb(54, 92, 66);"> Platos Tipicos </a> 
+</li>
+<li style="display: inline; padding: 135px 135px;"> <a href="/florayfauna.html" style="background-color:; color: rgb(54, 92, 66);"> Flora y Fauna </a> 
+</li>
+<li style="display: inline; padding: 135px 135px;"> <a href="/folklore.html" style="background-color:; color: rgb(54, 92, 66);"> Folklore </a> 
+</li>
+</ul>
+
+
+
+</nav>
+    <br><br>
+    <center>
+    <hr>
+<h3 style="color: rgb(32, 73, 16); font-size: 35px;">7 Maravillos lugares que puedes visitar en el Cusco</h3>
+<hr>
+</center>
+<nav style="background-color: rgba(45, 156, 119, 0.171);">
+<p> 
+    Cusco es uno de los principales atractivos turísticos del Cusco. La mayoría de visitantes llegan para ver Machu Picchu. Sin embargo, existen otros lugares asombrosos como Sacsayhuaman, Pisac, Ollantaytambo, el barrio de San Blas, Choquequirao y la Montaña 7 Colores.
+</p>
+</nav>
+<br><br>
+<ul>
+    <li> El Bario de San Blas</li>
+    <li> Sacsahyuaman</li>
+    <li> Pisac</li>
+    <li> Ollantaytambo</li>
+    <li> Choquequirao</li>
+    <li> La montaña de 7 colores</li>
+    <li> Machu Picchu</li>
+</ul>
+<hr>
+<br>
+
+<video src="" style="margin: 0 0 0 0 ;"> </video>
+<iframe width="960" height="315" src="https://www.youtube.com/embed/vd49sfKy8Mw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+    <hr>
+<ul><h3>
+    <ol start="1"><li>El barrio de San Blas</li></ol>
+</h3>
+    <li>Dentro de la ciudad del Cusco no encontrará un lugar más tradicional y pintoresco que el barrio de San Blas.</li>
+
+    <li>Se llega allí atravesando la calle Hantun Rumiyoc, en donde podrá observar la espectacular Piedra de los 12 Ángulos de Cusco.</li>
+
+    <li>En la Plazoleta de San Blas podrá observar el templo colonial que cuenta con un bello pulpito tallado de madera al estilo barroco.</li>
+
+    <li>En el barrio de San Blas se encuentran los talleres de los más renombrados artesanos cusqueños. Allí proliferan las tiendas de artesanías como: pinturas, tallados, esculturas, ropa de alpaca, joyería y más.
+    </li>
+
+    <li>Además podrá encontrar muchos hoteles, restaurantes, pubs y centros de turismo místico. Muchos turistas gustan simplemente de sentarse en una banca y contemplar el lugar</li>
+
+</ul>
+
+<img src="/imagenes1/barrio2.jpg" alt=" Calles del tradicional barrio de San Blas " style="margin: 05%
+;">
+<ul><h3>
+    <hr>
+    <ol start="2"><li>Sacsayhuaman</li></ol>
+</h3>
+    <li>La fortaleza de Sacsayhuaman es una de las construcciones más asombrosas que hicieron los incas.</li>
+    <li>El conjunto arqueológico de Sacsayhuaman además está conformado por varios recintos incaicos como: Qenqo, Pucapucara y Tambomachay. Todos fueron hechos con el fin de vigilar la ciudad de Cusco así como de sitio de descanso del inca.</li>
+    <li>Resaltan sus muros ciclópeos así como sus torreones ubicados sobre las murallas que están en zigzag y sus enormes puertas trapezoidales.</li>
+    <li> En Sacsayhuaman destacan sus chincanas (túneles), sus puertas, murallas (baluartes), torreones así como suchunas (rodaderos).</li>
+    <li>Cada 24 de junio se realiza el Inti Raymi en la explanada de Sacsayhuaman. La Fiesta del Sol es una celebración cuyos orígenes se remontan en la época inca</li>
+</ul>
+<br>
+<img src="/imagenes1/muros.jpg" alt=""  width="500" height="300" style="margin: 0 120px 0 100px;">
+<img src="/imagenes1/muros2.jpg" alt="" width="500" height="300" style="margin: 0 0px 0 100px;">
+<br>
+
+<hr>
+
+    <h3>
+<ol start="3"><li>Pisac</li>
+</ol>
+</h3>
+<li> Pisac es uno de los pueblos más pintorescos del Valle Sagrado de los Incas.</li>
+<li> El mercado artesanal de Pisac lo sorprenderá con sus innumerables puestos de venta en las calles hasta llegar a su plaza principal. En este mercado podrá encontrar artesanías de todo tipo: polos, calzado, joyas, esculturas, pinturas, cerámicas, etc.</li>
+<li>En lo alto de la montaña podrá encontrar las construcciones incas del sitio arqueológico de Pisac.</li>
+<li>Este sitio arqueológico es uno de los mejores conservados que existen, con magníficas estructuras como el Templo del Sol o su espectacular sistema de andenería.
+</li>
+<li>Los paisajes que rodean Pisac así como las tradiciones de sus pobladores atraen al turista extranjero. La mayoría llega para visitar el mercado y el sitio arqueológico</li>
+</ul>
+<br>
+<img src="/imagenes1/pisac.jpg" alt="" width="500" height="300" style="margin: 0 120px 0 100px;">
+<img src="/imagenes1/pisac2.jpg" alt="" width="500" height="300" style="margin: 0 120px 0 100px;">
+
+<br>
+<hr>
+<ul>
+    <h3>
+    <ol start="4">
+        <li>Ollantaytambo</li>
+    </h3>
+    </ol>
+    <li>
+    OllantaytamboOllantaytambo es un punto de paso obligado de los visitantes que se dirigen a Machu Picchu. En este pueblo se ubica la principal estación de tren que transporte turistas hacia el sitio incaico. </li>
+    <li>Sin embargo, Ollantaytambo cuenta con su propio recinto inca cuyas construcciones son tan asombrosas como Machu Picchu.</li>
+    <li>La ciudad inca de Ollantaytambo fue un recinto sagrado que también funcionó de fortaleza durante la invasión española.</li>
+    <li>Sus construcciones más famosas son: la Real Casa del Sol, el Portada Monumental, el Baño de la Ñusta y el Templo del Sol.</li>
+    <li>El propio pueblo también es un deleite. Sus casas y calles conservan su original estructuras inca. Allí también podrá disfrutar de restaurantes, bares, hoteles y cafés</li>
+</ul>
+<img src="/imagenes1/valle.jpg" alt="" width="500" height="300" style="margin: 0 120px 0 100px;">
+<br>
+<hr>
+
+<ul>
+    <h3>    <ol start="5">
+        <li>
+            Choquequirao
+    </li>
+</h3>
+    <li>Choquequirao es una espectacular ciudad inca que se encuentra en un lugar remoto cerca del nevado Salkantay.</li>
+    <li>Es considerada la ‘Hermana sagrada de Machu Picchu’ debido al parecido del entorno y sus edificaciones.</li>
+    <li>No hay forma de llegar a Choquequirao con transporte por lo que se debe realizar una caminata de 60 kilómetros que dura 2 días, aproximadamente.</li>
+    <li>La ruta no es sencilla. Inicia con un viaje en bus de Cusco al pueblo de Cachora. Luego se realiza la caminata por paisajes montañosos abundante en flora y fauna.</li>
+    <li>Debido a la dificulta para llegar allí, son pocos los turistas que visitan Choquequirao. A diferencia de Machu Picchu, éste es un lugar que aún se puede disfrutar con tranquilidad.
+    </li>
+</ol>
+</ul>
+<img src="/imagenes1/vall3.jpg" alt="" width="500" height="300" style="margin: 0 120px 0 100px;">
+<br>
+<hr>
+<ul>
+    <h3>
+    <ol start="6">
+        <li>La montaña de 7 Colores</li>
+    </h3>
+    </ol>
+    <li>El atractivo turístico de moda en Cusco se llama Vinicunca, Montaña Arcoíris o simplemente Montaña de los 7 colores.</li>
+    <li>La montaña Vinicunca está a unos 5,200 metros del nivel del mar (17,060 ft). Se encuentra a los pies del nevado Ausangate, el más alto de Cusco.</li>
+    <li>Esta montaña se descubrió en los últimos años tras el deshielo que dejó descubierto la belleza de sus minerales multicolores.</li>
+    <li>El hermoso paisaje que ofrece la montaña atrae cada día a cientos de visitantes. El lugar se volvió unos de los atractivos turísticos más fotografiados.</li>
+    <li>El tour incluye transporte, almuerzo, guía turístico y entrada. Para llegar a la cima, los visitantes deben recorrer a pie 5 kilómetros, aproximadamente. La otra opción es contratar un caballo a los pobladores locales.</li>
+</ul>
+
+<img src="/imagenes1/7.jpg" alt="" width="500" height="300" style="margin: 0 120px 0 100px;">
+<hr><br>
+<ul>
+    <h3>
+    <ol start="7"><li>Machu Picchu</li></ol>
+</h3>
+    <li>Un viaje a Cusco no sería considerado como tal si no se visita la ciudad inca de Machu Picchu.</li>
+    <li>La ciudad inca se alza imponente entre la Cordillera de los Andes y la ceja de selva amazónica. Es considerada una de las máximas obras del hombre. En 2007 fue elegida como Maravilla del Mundo moderno.</li>
+    <li>A pesar de su difícil ubicación, se puede llegar a Machu Picchu de 3 formas: a través del Camino Inca de 4 días, con la ruta de tren (4 horas) o con la ruta alternativa por Hidroeléctrica (8 horas).</li>
+    <li>El boleto de ingreso a Machu Picchu se puede comprar por internet o en las oficinas autorizadas del Cusco.</li>
+    <li>No hay pretexto para no visitar la obra maestra de los incas, un lugar obligado de visita de todo aquel que llega al Cusco.</li>
+    <li>Lo que atrae a los visitantes es la belleza natural que rodea Machu Picchu así como sus misteriosas construcciones de piedra bien conservadas.</li>
+</ul>
+<img src="/imagenes1/gaaa.jpg" alt="" width="500" height="300" style="margin: 0 120px 0 100px;">
+<br>
 </body>
+
+<br><br>
+<br>
+<hr>
+    <footer>
+        <ul>
+    <li style="margin: 0 0 0 800px">
+        <h3>Contactanos!</h3>
+    </li>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">✆: +51 920891364</li>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">✉: 76549037@certus.edu.pe</li>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Ƒ: Brayan Fiestas</li>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">📸: Alexis Fiestas
+    </li>
+    <li style="margin: 0 0 0 800px">
+        <h3>Recursos Adicionales:</h3>
+    </li>
+<br>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Quienes Somos </li>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Contactos</li>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Reservas</li>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Blog</li>
+    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Política de reserva y cancelación</li>
+    </ul>
+        
+    </footer>
+<hr>
 </html>
