--- a/florayfauna.html
+++ b/florayfauna.html
@@ -517,43 +517,36 @@ La flor de cantuta es admirada desde los tiempos anteriores a los incas. Según 
 <li>
     En los pueblos del altiplano (de Perú y Bolivia); la flor de cantuta es utilizada como collar en las puertas de las familias. Esto significa que la casa ofrece hospitalidad a sus visitantes.
 </li>
-
-</body>
+</ul>
 </section>
 <br><br>
 <br>
 <hr>
     <footer>
         <ul>
-    <li style="margin: 0 0 0 800px">
+    <li style="margin: 0 0 0 600px">
         <h3>Contactanos!</h3>
     </li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">✆: +51 920891364</li>
+    <li style="display: inline; padding: 50px 50px;color: rgb(17, 0, 255);">✆: +51 920891364</li>
     <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">✉: 76549037@certus.edu.pe</li>
     <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Ƒ: Brayan Fiestas</li>
     <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">📸: Alexis Fiestas
     </li>
-    <li style="margin: 0 0 0 800px">
+    <li style="margin: 0 0 0 600px">
         <h3>Recursos Adicionales:</h3>
     </li>
 <br>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Quienes Somos </li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Contactos</li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Reservas</li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Blog</li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Política de reserva y cancelación</li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Quienes Somos </li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Contactatos</li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Reservas</li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Blog</li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Política de reserva y cancelación</li>
     </ul>
         
     </footer>
-<hr>
+    <hr>
 
 
 
-</ul>
-
-
-
-
-
-
+</body>
 </html>
