--- a/zonasturisticas.html
+++ b/zonasturisticas.html
@@ -176,32 +176,31 @@
 </ul>
 <img src="/imagenes1/gaaa.jpg" alt="" width="500" height="300" style="margin: 0 120px 0 100px;">
 <br>
-</body>
-
 <br><br>
 <br>
 <hr>
     <footer>
         <ul>
-    <li style="margin: 0 0 0 800px">
+    <li style="margin: 0 0 0 600px">
         <h3>Contactanos!</h3>
     </li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">✆: +51 920891364</li>
+    <li style="display: inline; padding: 50px 50px;color: rgb(17, 0, 255);">✆: +51 920891364</li>
     <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">✉: 76549037@certus.edu.pe</li>
     <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Ƒ: Brayan Fiestas</li>
     <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">📸: Alexis Fiestas
     </li>
-    <li style="margin: 0 0 0 800px">
+    <li style="margin: 0 0 0 600px">
         <h3>Recursos Adicionales:</h3>
     </li>
 <br>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Quienes Somos </li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Contactos</li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Reservas</li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Blog</li>
-    <li style="display: inline; padding: 135px 135px;color: rgb(17, 0, 255);">Política de reserva y cancelación</li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Quienes Somos </li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Contactatos</li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Reservas</li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Blog</li>
+    <li style="display: inline; padding: 50px 90px;color: rgb(17, 0, 255);">Política de reserva y cancelación</li>
     </ul>
         
     </footer>
-<hr>
+    <hr>
+</body>
 </html>
