--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Departamento del Cusco </title>
 </head>
-<body style="background-color: rgb(211, 197, 197);">
+<body style="background-color: rgb(211, 197, 197);"></body>
+
     <h1 style="color: rgb(90, 3, 3); text-align: center; font-size: 30px; margin: 30px 20px" > Departamento del Cusco</h1>
     <nav style="background-color: rgba(114, 90, 90, 0.171);">
 <ul style="list-style-type: none; text-align: center;display: inline-block; color: rgb(5, 5, 5);font-size: 18px;">
